# bookfinder-general

./: .gitignore  .mcp.json  CLAUDE-AUTONOMOUS.md  CLAUDE.md  LICENSE  README.md  START.bat  acquire_muntzer_johnbrown.py  app.py  claude-design-brief.md  engineer_command.sh  hands_off.yaml  im002_acquire.py  im003_ews_direct.py  im003_retry.py  main.py  pyproject.toml  requirements.txt  session-notes.md
.claude/skills/: bookfinder-aesthetic.md
bookfinder_general/: __main__.py  browser.py  cli.py  config.py  download.py  extractor.py  library.py  mcp_server.py  pdf_generator.py  search.py  summarizer.py  translator.py
drafts/: readme-why-section-v1.md
skills/: README.md
skills/book-to-methodology-skill/: SKILL.md
skills/book-to-methodology-skill/scripts/: extract_health.py
skills/examples/macedonian-logistics-advisor/: PROVENANCE.md  SKILL.md  cheatsheet.md  glossary.md
skills/examples/macedonian-logistics-advisor/data/: rates.json
skills/examples/macedonian-logistics-advisor/reference/: chapters.md  constraints.md
skills/examples/macedonian-logistics-advisor/scripts/: advise.py
skills/examples/macedonian-phalanx-advisor/: PROVENANCE.md  SKILL.md  cheatsheet.md  glossary.md
skills/examples/macedonian-phalanx-advisor/data/: model.json
skills/examples/macedonian-phalanx-advisor/reference/: chapters.md  constraints.md
skills/examples/macedonian-phalanx-advisor/scripts/: advise.py
templates/: index.html
tests/: test_smoke.py
