[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bookfinder-general"
version = "0.1.0"
description = "Research book finder, downloader, processor, and summarizer"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "rich==14.3.3",
    "lxml==6.0.2",
    "flask==3.1.3",
    "pymupdf4llm==1.27.2.2",
    "deep-translator==1.11.4",
    "mcp==1.26.0",
    "fpdf2==2.8.7",
    "markdown2==2.5.5",
]

[project.optional-dependencies]
browser = ["playwright==1.58.0"]

[project.scripts]
bookfinder-mcp = "bookfinder_general.mcp_server:run_server"

[project.urls]
Homepage = "https://github.com/lerugray/bookfinder-general"

[tool.setuptools.packages.find]
include = ["bookfinder_general*"]
