[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bookfinder-general"
version = "0.1.0"
description = "Research book finder, downloader, processor, and summarizer"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "rich==14.3.3",
    "lxml==6.0.2",
    "flask==3.1.3",
    "pymupdf4llm==1.27.2.2",
    "deep-translator==1.11.4",
    "mcp==1.26.0",
    "fpdf2==2.8.7",
    "markdown2==2.5.5",
]

[project.optional-dependencies]
browser = ["playwright==1.58.0"]
ocr = ["rapidocr-onnxruntime>=1.3.0"]
test = [
    "pytest==8.4.1",
    "ruff==0.15.11",
]

[project.scripts]
bookfinder-mcp = "bookfinder_general.mcp_server:run_server"

[project.urls]
Homepage = "https://github.com/lerugray/bookfinder-general"

[tool.setuptools.packages.find]
include = ["bookfinder_general*"]

# Ruff config — added in bf-001 alongside pytest wiring. The existing
# bookfinder_general/ modules predate this lint gate and carry
# residual F401 / F541 / E402 / E741 / E731 / F811 issues. The per-file
# ignores below hold the line without widening bf-001 into lint
# cleanup: new code in tests/ must pass the full ruleset, and when a
# future task does targeted cleanup on one of the listed files it
# should remove that file's entry here at the same time.
[tool.ruff.lint]
# Ruff default ruleset — E4 (imports), E7 (whitespace semantics),
# E9 (runtime errors), F (pyflakes). Deliberately excludes E501
# (line-too-long) because existing modules have long lines that
# reformatting would require touching hands_off code to clear.
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"bookfinder_general/browser.py" = ["F401", "F541", "F811"]
"bookfinder_general/cli.py" = ["F401"]
"bookfinder_general/download.py" = ["F401", "F541"]
"bookfinder_general/library.py" = ["F401", "F541"]
"bookfinder_general/mcp_server.py" = ["E402", "E731", "E741", "F401", "F541"]
"bookfinder_general/pdf_generator.py" = ["F401"]
"bookfinder_general/search.py" = ["E741", "F401", "F541"]
"bookfinder_general/summarizer.py" = ["F401"]
